# TesteCodex

./: README.md  package.json  pyproject.toml  tailwind.config.ts
advisor_intelligence/: __init__.py  cli.py
advisor_intelligence/conversation_engine/: __init__.py  generator.py
advisor_intelligence/examples/: examples_ptbr.json
advisor_intelligence/market_radar/: __init__.py  classifier.py  digest.py  fetch.py  fixtures.py  parser.py
advisor_intelligence/planner/: __init__.py  daily_plan.py
advisor_intelligence/profiling/: __init__.py  archetypes.py
advisor_intelligence/schemas/: client_archetype.schema.json  conversation_brief.schema.json  daily_plan.schema.json  market_digest.schema.json  market_item.schema.json  validator.py
fixtures/market_digests/: digest_equities_focus.json  digest_funds_focus.json  digest_macro_focus.json
fixtures/market_items/: 01_selic_copom.json  02_ipca_pressao.json  03_dolar_fiscal.json  04_ibovespa_bancos.json  05_petroleo_commodities.json  06_arcabouco_fiscal.json  07_resultados_empresa.json  08_fiis_fluxo.json  09_previdencia_reforma.json  10_unusual_headline.json  11_missing_date.json  12_duplicate_headline_a.json  13_duplicate_headline_b.json  14_long_headline.json  15_juros_futuros.json  16_b3_fluxo.json  17_soja_exportacoes.json  18_bancos_lucro.json  19_multimercado_resgates.json  20_politica_monetaria.json
src/app/: globals.css  layout.tsx  page.tsx
tests/: test_golden_outputs.py  test_market_parser.py  test_offline_smoke.py  test_schema_validation.py
tests/golden/: conversation_brief_snapshots.json
(+24 files in other folders)
