[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advisor-intelligence-mvp"
version = "0.1.0"
description = "MVP de camada de inteligência para assessores de investimentos no Brasil"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
